Memory statistic collection enabled for more tests
Now memory usage reports will be collected at the end of all test scenarios that use runStudio with the callback. And the report will be collected right after executing the callback scenario

Bug: 233373532
Test: BuildAndRunTest
Change-Id: I4b5623dff0450fc9b5d257c9b96f8c54af4776f6

GitOrigin-RevId: 9fc159511b4e43b978c6c80cd4ea89a38a2aaac3